@@ -1,0 +1,7 @@
+<div class="test_group">
+  {{#listItems.two}}
+    {{> test-styled-atom }}
+    {{> test-styled-atom:test_1 }}
+    {{> test-styled-atom}}
+  {{/listItems.two}}
+</div>
