@@ -2,6 +2,8 @@
   "use strict";
 
   var lih = require('../builder/list_item_hunter');
+  var pa = require('../builder/pattern_assembler');
+  var object_factory = require('../builder/object_factory');
 
   exports['list_item_hunter'] = {
     'process_list_item_partials finds and outputs basic repeating blocks' : function(test){
@@ -394,6 +396,58 @@
       //assert
       test.equals(currentPattern.extendedTemplate, "One" );
 
+      test.done();
+    },
+
+    'processPatternRecursive - correctly ignores bookended partials without a style modifier when the same partial has a style modifier  between' : function(test){
+      //arrange
+      var fs = require('fs-extra');
+      var pattern_assembler = new pa();
+      var list_item_hunter = new lih();
+      var patterns_dir = './test/files/_patterns';
+
+      var pl = {};
+      pl.config = {};
+      pl.data = {};
+      pl.data.link = {};
+      pl.config.debug = false;
+      pl.patterns = [];
+      pl.config.patterns = { source: patterns_dir};
+      pl.listitems = {
+        "1": [
+           {
+              "message": "Foo"
+           }
+        ],
+        "2": [
+           {
+              "message": "Foo"
+           },
+           {
+              "message": "Bar"
+           }
+        ]
+      };
+
+      var atomPattern = new object_factory.oPattern('test/files/_patterns/00-test/03-styled-atom.mustache', '00-test', '03-styled-atom.mustache');
+      atomPattern.template = fs.readFileSync(patterns_dir + '/00-test/03-styled-atom.mustache', 'utf8');
+      atomPattern.extendedTemplate = atomPattern.template;
+      atomPattern.stylePartials = pattern_assembler.find_pattern_partials_with_style_modifiers(atomPattern);
+
+      var bookendPattern = new object_factory.oPattern('test/files/_patterns/00-test/11-bookend-listitem.mustache', '00-test', '11-bookend-listitem.mustache');
+      bookendPattern.template = fs.readFileSync(patterns_dir + '/00-test/11-bookend-listitem.mustache', 'utf8');
+      bookendPattern.extendedTemplate = bookendPattern.template;
+      bookendPattern.stylePartials = pattern_assembler.find_pattern_partials_with_style_modifiers(bookendPattern);
+
+      pl.patterns.push(atomPattern);
+      pl.patterns.push(bookendPattern);
+
+      //act
+      list_item_hunter.process_list_item_partials(bookendPattern, pl);
+
+      //assert. here we expect {{styleModifier}} to be replaced with an empty string or the styleModifier value from the found partial with the :styleModifier
+      var expectedValue = '<div class="test_group"> <span class="test_base "> Foo </span> <span class="test_base test_1"> Foo </span> <span class="test_base "> Foo </span> <span class="test_base "> Bar </span> <span class="test_base test_1"> Bar </span> <span class="test_base "> Bar </span> </div>';
+      test.equals(bookendPattern.extendedTemplate.replace(/\s\s+/g, ' ').replace(/\n/g, ' ').trim(), expectedValue.trim());
       test.done();
     }
 
